sophons/apps/p2p/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/nlamirault/schema-hub/main/schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sparrow
  namespace: pp22pp
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Ahoy!
    gethomepage.dev/group: Media
    gethomepage.dev/icon: qbittorrent.svg
    gethomepage.dev/name: qBittorrent
    gethomepage.dev/app: qbittorrent
    gethomepage.dev/href: "https://sparrow.sophons.cloud"
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - sparrow.sophons.cloud

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /css
        - path:
            type: PathPrefix
            value: /scripts
        - path:
            type: PathPrefix
            value: /images
      backendRefs:
        - name: sparrow
          port: 80
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: forwardauth-authelia
      backendRefs:
        - name: sparrow
          port: 80
